# ilbtools

./: .gitignore  Makefile.am  README.md  configure.ac  ilb2png.sln
src/: aowpatch.c  dumpilb.cpp  ilb2png.cpp  ilb2png.vcxproj  ilb2png.vcxproj.filters  progress.h
