AUTOMAKE_OPTIONS = foreign subdir-objects

dist_doc_DATA = README.md LICENSE

bin_PROGRAMS = ilb2png dumpilb aowpatch

ilb2png_CXXFLAGS  = -std=gnu++2a
dumpilb_CXXFLAGS  = -std=gnu++2a
aowpatch_CXXFLAGS = -std=gnu++2a
ilb2png_SOURCES   = src/ilb2png.cpp
dumpilb_SOURCES   = src/dumpilb.cpp
aowpatch_SOURCES  = src/aowpatch.c

